k8s/overlays/production/odoo-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: odoo
          readinessProbe:
            $patch: replace
            tcpSocket:
              port: 8069
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            $patch: replace
            tcpSocket:
              port: 8069
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: "1"
              memory: 2Gi
            limits:
              cpu: "4"
              memory: 6Gi
